Underlay: address warnings, minor optimizations (#837)